kubernetes-manifests/ocagent.yaml
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: oc-agent
  labels:
    app: opencensus
    component: oc-agent
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: opencensus
        component: oc-agent
    spec:
      containers:
      - name: oc-agent
        image: omnition/opencensus-agent:0.1.10
        resources:
          limits:
            cpu: 100m
            memory: 500Mi
        command:
          - "/ocagent_linux"
          - "--config=/conf/oc-agent-config.yaml"
        ports:
        - containerPort: 55678
          hostPort: 55678
          protocol: TCP
        - containerPort: 55679
          hostPort: 55679
          protocol: TCP
#        - containerPort: 14267
#        - containerPort: 14268
#        - containerPort: 9411
        volumeMounts:
        - name: oc-agent-config-vol
          mountPath: /conf
      volumes:
        - configMap:
            name: oc-agent-conf
            items:
              - key: oc-agent-config
                path: oc-agent-config.yaml
          name: oc-agent-config-vol
