kubernetes-manifests/aistylistservice.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiquanBuyservice
  labels:
    app: aiquanBuyservice
spec:
  selector:
    matchLabels:
      app: aiquanBuyservice
  template:
    metadata:
      labels:
        app: aiquanBuyservice
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: server
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: false
        image: aiquanBuyservice:latest
        imagePullPolicy: Never
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          initialDelaySeconds: 20
          periodSeconds: 15
          httpGet:
            path: /health
            port: 8080
        livenessProbe:
          initialDelaySeconds: 20
          periodSeconds: 15
          httpGet:
            path: /health
            port: 8080
        resources:
          requests:
            cpu: 200m
            memory: 180Mi
          limits:
            cpu: 300m
            memory: 300Mi
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
          readOnly: true
      volumes:
      - name: google-cloud-key
        secret:
          secretName: google-cloud-key
          optional: true
---
apiVersion: v1
kind: Service
metadata:
  name: aiquanBuyservice
  labels:
    app: aiquanBuyservice
spec:
  type: ClusterIP
  selector:
    app: aiquanBuyservice
  ports:
  - name: http
    port: 80
    targetPort: 8080
