kubernetes-manifests/jaeger.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jaeger
spec:
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
      - name: jaeger
        image: gcr.io/microservices-demo-app/jaeger
        ports:
        - containerPort: 16686
          name: frontend
          protocol: TCP
        - containerPort: 14268
          name: thrift-direct
          protocol: TCP
        readinessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 16686
        livenessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 16686
        volumeMounts:
        - mountPath: /data
          name: jaeger-data
        resources:
          limits:
            memory: 256Mi
            cpu: 125m
          requests:
            cpu: 70m
            memory: 200Mi
      volumes:
      - name: jaeger-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
spec:
  type: ClusterIP
  selector:
    app: jaeger
  ports:
  - name: frontend
    port: 16686
    targetPort: 16686
    protocol: TCP
  - name: jaeger-thrift-direct
    port: 14268
    targetPort: 14268
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-external
spec:
  type: LoadBalancer
  selector:
    app: jaeger
  ports:
  - name: http
    port: 16686
    targetPort: 16686
