kubernetes-manifests/otel-collector.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: opentelemetry-demo
  labels:
    app: opentelemetry
    component: otel-collector
spec:
  ports:
  - name: otlp-grpc # Default OpenTelemetry RPC receiver port.
    port: 4317
  - name: zipkin # Default endpoint for Zipkin trace receiver.
    port: 9411
  - name: jaeger-grpc # Default endpoint for Jaeger gRPC trace receiver.
    port: 14250
  - name: jaeger-thrift-http # Default endpoint for Jaeger thrift HTTP trace receiver.
    port: 14268
  - name: zpages # ZPages endpoint.
    port: 55679
  - name: otlp-http # Default OpenTelemetry HTTP receiver port.
    port: 55680
  selector:
    component: otel-collector
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  namespace: opentelemetry-demo
  labels:
    app: opentelemetry
    component: otel-collector
spec:
  selector:
    matchLabels:
      app: opentelemetry
      component: otel-collector
  minReadySeconds: 5
  progressDeadlineSeconds: 120
  replicas: 1
  template:
    metadata:
      labels:
        app: opentelemetry
        component: otel-collector
    spec:
      containers:
      - command:
          - "/otelcol"
          - "--config=/etc/otel/config.yaml"
          - "--mem-ballast-size-mib=683" # Memory Ballast size should be max 1/3 to 1/2 of memory.
        image: otel-collector
        name: otel-collector
        resources:
          limits:
            cpu: 1
            memory: 2Gi
          requests:
            cpu: 200m
            memory: 400Mi
        ports:
        - containerPort: 4317 # Default OpenTelemetry RPC receiver port.
        - containerPort: 9411 # Default endpoint for Zipkin trace receiver.
        - containerPort: 14250 # Default endpoint for Jaeger gRPC trace receiver.
        - containerPort: 14268 # Default endpoint for Jaeger thrift HTTP trace receiver.
        - containerPort: 55679 # Default endpoint for ZPages.
        - containerPort: 55680 # Default OpenTelemetry HTTP receiver port.
        livenessProbe:
          httpGet:
            path: /
            port: 13133 # Health Check extension default port.
        readinessProbe:
          httpGet:
            path: /
            port: 13133 # Health Check extension default port.
