kubernetes-manifests/netpols.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: adservice-netpol
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - port: 9555
      protocol: TCP
  podSelector:
    matchLabels:
      app: adservice
  policyTypes:
  - Ingress
  - Egress
status: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: cartservice-netpol
spec:
  egress:
  - ports:
    - port: 6379
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: redis-cart
  - ports:
    - port: 5353
      protocol: UDP
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice
    ports:
    - port: 7070
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - port: 7070
      protocol: TCP
  podSelector:
    matchLabels:
      app: cartservice
  policyTypes:
  - Ingress
  - Egress
status: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: checkoutservice-netpol
spec:
  egress:
  - ports:
    - port: 7070
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: cartservice
  - ports:
    - port: 7000
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: currencyservice
  - ports:
    - port: 8080
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: emailservice
  - ports:
    - port: 50051
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: paymentservice
  - ports:
    - port: 3550
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: productcatalogservice
  - ports:
    - port: 50051
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: shippingservice
  - ports:
    - port: 5353
      protocol: UDP
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - port: 5050
      protocol: TCP
  podSelector:
    matchLabels:
      app: checkoutservice
  policyTypes:
  - Ingress
  - Egress
status: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: currencyservice-netpol
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice
    ports:
    - port: 7000
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - port: 7000
      protocol: TCP
  podSelector:
    matchLabels:
      app: currencyservice
  policyTypes:
  - Ingress
  - Egress
status: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: emailservice-netpol
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: emailservice
  policyTypes:
  - Ingress
  - Egress
status: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: frontend-netpol
spec:
  egress:
  - ports:
    - port: 9555
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: adservice
  - ports:
    - port: 7070
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: cartservice
  - ports:
    - port: 5050
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: checkoutservice
  - ports:
    - port: 7000
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: currencyservice
  - ports:
    - port: 3550
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: productcatalogservice
  - ports:
    - port: 8080
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: recommendationservice
  - ports:
    - port: 50051
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: shippingservice
  - ports:
    - port: 5353
      protocol: UDP
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: loadgenerator
    ports:
    - port: 8080
      protocol: TCP
  - ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Ingress
  - Egress
status: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: loadgenerator-netpol
spec:
  egress:
  - ports:
    - port: 8080
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: frontend
  - ports:
    - port: 5353
      protocol: UDP
  podSelector:
    matchLabels:
      app: loadgenerator
  policyTypes:
  - Ingress
  - Egress
status: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: paymentservice-netpol
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice
    ports:
    - port: 50051
      protocol: TCP
  podSelector:
    matchLabels:
      app: paymentservice
  policyTypes:
  - Ingress
  - Egress
status: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: productcatalogservice-netpol
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice
    ports:
    - port: 3550
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - port: 3550
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: recommendationservice
    ports:
    - port: 3550
      protocol: TCP
  podSelector:
    matchLabels:
      app: productcatalogservice
  policyTypes:
  - Ingress
  - Egress
status: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: recommendationservice-netpol
spec:
  egress:
  - ports:
    - port: 3550
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: productcatalogservice
  - ports:
    - port: 5353
      protocol: UDP
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: recommendationservice
  policyTypes:
  - Ingress
  - Egress
status: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: redis-cart-netpol
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cartservice
    ports:
    - port: 6379
      protocol: TCP
  podSelector:
    matchLabels:
      app: redis-cart
  policyTypes:
  - Ingress
  - Egress
status: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: shippingservice-netpol
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice
    ports:
    - port: 50051
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - port: 50051
      protocol: TCP
  podSelector:
    matchLabels:
      app: shippingservice
  policyTypes:
  - Ingress
  - Egress
status: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: default-deny-in-namespace
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
status: {}
